# internal/routers/api/v1/news.go
@@ -2,6 +2,8 @@ package v1
 
 import (
 	"github.com/gin-gonic/gin"
+	"golang-admin/internal/dao"
+	"golang-admin/internal/model"
 	"golang-admin/internal/service"
 	"golang-admin/pkg/app"
 	"golang-admin/pkg/errcode"
@@ -13,6 +15,15 @@ func NewNews() News {
 	return News{}
 }
 
+// Create godoc
+// @Summary 新建新闻
+// @Tags 新闻
+// @Produce json
+// @Param data body service.CreateNewsBody true "创建新闻"
+// @Success 200 {object} model.SwagSuccess
+// @Failure 400 {object} errcode.Error
+// @Failure 500 {object} errcode.Error
+// @Router /api/v1/news [post]
 func (n News) Create(c *gin.Context) {
 	response := app.NewResponse(c)
 	var param = service.CreateNewsBody{}
@@ -31,7 +42,15 @@ func (n News) Create(c *gin.Context) {
 	response.Success()
 }
 
-
+// List godoc
+// @Summary 新闻列表
+// @Tags 新闻
+// @Produce json
+// @Param param query swagListQuery true "新闻列表"
+// @Success 200 {object} swagListRes
+// @Failure 400 {object} errcode.Error
+// @Failure 500 {object} errcode.Error
+// @Router /api/v1/news [get]
 func (n News) List(c *gin.Context) {
 	response := app.NewResponse(c)
 	var param = service.ListNewsReq{}
@@ -55,4 +74,15 @@ func (n News) List(c *gin.Context) {
 	}
 
 	response.SuccessList(list, pager, totalSize)
+}
+
+type swagListQuery struct {
+	model.SwagPager
+	Title string `json:"title"`
+}
+
+type swagListRes struct {
+	model.SwagCommon
+	Pager *app.Pager `json:"pager"`
+	List []*dao.News
 }
