# internal/routers/api/v1/tag.go
@@ -2,6 +2,7 @@ package v1
 
 import (
 	"github.com/gin-gonic/gin"
+	"golang-admin/internal/model"
 	"golang-admin/internal/service"
 	"golang-admin/pkg/app"
 	"golang-admin/pkg/errcode"
@@ -13,6 +14,15 @@ func NewTag() Tag {
 	return Tag{}
 }
 
+// Create godoc
+// @Summary 新建标签
+// @Tags 标签
+// @Produce json
+// @Param data body service.CreateTagBody true "创建标签"
+// @Success 200 {object} model.SwagSuccess
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags [post]
 func (Tag) Create(c *gin.Context) {
 	response := app.NewResponse(c)
 	param := service.CreateTagBody{}
@@ -31,6 +41,14 @@ func (Tag) Create(c *gin.Context) {
 	response.Success()
 }
 
+// List godoc
+// @Summary 标签列表
+// @Tags 标签
+// @Produce json
+// @Success 200 {object} swagTagList
+// @Failure 400 {object} errcode.Error
+// @Failure 500 {object} errcode.Error
+// @Router /api/v1/tags [get]
 func (Tag) List(c *gin.Context) {
 	response := app.NewResponse(c)
 
@@ -47,4 +65,9 @@ func (Tag) List(c *gin.Context) {
 	}
 
 	response.SuccessListAll(tags, totalCount)
+}
+
+type swagTagList struct {
+	model.SwagTotalSize
+	List []*model.Tag `json:"list"`
 }
